Wire together Java and Python sides

--- a/Frontend/kbcaptcha-demo/src/main/resources/templates/main.html
+++ b/Frontend/kbcaptcha-demo/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,6 +24,7 @@
                 </div>
                 <input id="textbox" type="text" />
                 <button id="submit-data">ARE YOU A ROBOT?</button>
+                <p>YOUR RESULTS: <span id="score-field">YOUR SCORE</span></p>
             </div>
             
         </main>
