--- a/Frontend/kbcaptcha-demo/src/main/resources/templates/main.html
+++ b/Frontend/kbcaptcha-demo/src/main/resources/templates/main.html
@@ -19,8 +19,8 @@
             <h1>KB-CAPTCHA Demo</h1>
             <p>Welcome to the demo for the KB-CAPTCHA solution! </p>
             <div>
-                <p id="test-label">Take the test!</p>
-                <p id="test-explanation">This test will record your keystrokes and make a prediction on your humanity! It does this by analyzing the following:</p>
+                <p id="test-label">This webpage serves as a demonstration of the functionality of the CAPTCHA solution. Feel free to jump right into the test down <a href="#testing-area">below</a>, or read about the motivation behind the project <a href="/about">here</a>.</p>
+                <p id="test-explanation">The test below will record your keystrokes and make a prediction on your humanity! It does this by analyzing the following:</p>
                 <ul id="analysis-methods">
                     <li>Average value and standard deviation for the duration that you hold down keys</li>
                     <li>Average value and standard deviation for the time between keystrokes</li>
@@ -29,7 +29,7 @@
                 <p id="test-instructions">This system is content agnostic! 
                     That means you can type anything into the box. 
                     However, spamming your keyboard with random input or using very short inputs are unlikely to produce typical typing behavior. 
-                    For best results, try typing a sentence or two. If you need ideas, feel free to try the button below to get one of Marcus Aurelius' quotes!</p>
+                    For best results, try typing a sentence or two. If you need ideas, feel free to try the button below to get a quote from Marcus Aurelius' <cite>Meditations</cite>!</p>
                 
                 <div id="sample-sentence-container">
                     <p id="sample-sentence">Click the button to get an example sentence!</p>
