--- a/Frontend/kbcaptcha-demo/src/main/resources/templates/about.html
+++ b/Frontend/kbcaptcha-demo/src/main/resources/templates/about.html
@@ -9,19 +9,43 @@
         <link rel="stylesheet" th:href="@{/css/styles.css}">
     </head>
     <body>
-        <h1>About KB-CAPTCHA</h1>
-        <p>As bot detection technology has evolved, 
+        <nav>
+            <a href="/">Back to main page</a>
+            <a href="https://github.com/DowdyJ/KB-CAPTCHA/tree/main" target="_blank">Source Code</a>
+            <a id="contact-link" href="mailto:joeldowdy12@gmail.com">Contact</a>
+        </nav>
+        <main>
+            <h1>About KB-CAPTCHA</h1>
+            <p>As bot detection technology has evolved, 
             so too have the abilities of bots and their makers to bypass these systems. While not all bots are harmful, 
-            it is important that service providers and webhosts can choose when and how to restrict bot traffic. 
-            To combat bots, website owners frequently turn to CAPTCHA as a solution. Often times, this is a varation of the image CAPTCHA. 
-            Users are to look at confusing pictures and try to distinguish between images. However, this introduces several problems. 
-            First, these image CAPTCHAs are unpleasant to solve. 
-            Second, services have appeared which offer to solve CAPTCHAs both with AI and real humans who will solve the problems for a fee. 
-            As a result, real users are forced to solve these troublesome puzzles while bots do their actions unfettered by these precautions. The KB-CAPTCHA project hopes to offer an alternative to this. 
-            By analyzing users' actions while using a service, keyboard input in particular, we can make a guess as to whether a user is a bot or not.</p>
+            it is important that service providers and webhosts can choose when and how to restrict bot traffic.</p>
+
+            <p>To combat bots, website owners frequently turn to CAPTCHA as a solution. Often times, this is a varation of the image CAPTCHA. 
+            Users are to look at pictures and try to distinguish between images. However, this introduces several problems.</p>
+
+            <ul>
+                <li>These image CAPTCHAs are unpleasant to solve.</li>
+                <li>Many services exist to automate the solving of CAPTCHAs both with AI and real humans.</li>
+            </ul>
+
+            <p>As a result, real users are forced to solve these troublesome puzzles while bots pass freely. The KB-CAPTCHA project offers an alternate implementation. 
+            By analyzing users' actions while using a service, keyboard input in particular, we can make a guess as to whether a user is a bot or not without the user being forced to do a puzzle.
+            This then can be used to serve a traditional image based CAPTCHA to users who appear to be bots without burdening other users.</p>
+                
+            <div id="feature-list-area">
+                <h2>Features</h2>
+                <ul>
+                    <li>Uses machine learning to simultaneously analyze several different dimmensions of user keyboard input</li>
+                    <li>Functionality exposed through REST API</li>
+                    <li>Completely Dockerized (cross-platform)</li>
+                    <li>GPL-Licensed (free!)</li>
+                </ul>
+            </div>
 
 
-        <div>Return back to the demo page <a href="/">here</a></div>
+            <p>Return back to the demo page <a href="/">here</a></p>
+        </main>
+
         <script src="" async defer></script>
     </body>
 </html>
