Change solution to use median / IQR instead for key delay

--- a/Frontend/kbcaptcha-demo/src/main/resources/templates/about.html
+++ b/Frontend/kbcaptcha-demo/src/main/resources/templates/about.html
@@ -18,9 +18,9 @@
             <h1>About KB-CAPTCHA</h1>
             <p>As bot detection technology has evolved, 
             so too have the abilities of bots and their makers to bypass these systems. While not all bots are harmful, 
-            it is important that service providers and webhosts can choose when and how to restrict bot traffic.</p>
+            it is important that service providers and web hosts can choose when and how to restrict bot traffic.</p>
 
-            <p>To combat bots, website owners frequently turn to CAPTCHA as a solution. Often times, this is a varation of the image CAPTCHA. 
+            <p>To combat bots, website owners frequently turn to CAPTCHA as a solution. Oftentimes, this is a variation of the image CAPTCHA. 
             Users are to look at pictures and try to distinguish between images. However, this introduces several problems.</p>
 
             <ul>
