--- a/Frontend/kbcaptcha-demo/src/main/resources/templates/main.html
+++ b/Frontend/kbcaptcha-demo/src/main/resources/templates/main.html
@@ -23,12 +23,12 @@
                 <p id="test-explanation">The test below will record your keystrokes and make a prediction on your humanity! It does this by analyzing the following:</p>
                 <ul id="analysis-methods">
                     <li>Average value and standard deviation for the duration that you hold down keys</li>
-                    <li>Average value and standard deviation for the time between keystrokes</li>
+                    <li>Median value and interquartile range (IQR) for the time between keystrokes</li>
                     <li>How often your keys overlap when you type (two consecutive keys pressed at the same time)</li>
                 </ul>
                 <p id="test-instructions">This system is content agnostic! 
                     That means you can type anything into the box. 
-                    However, spamming your keyboard with random input or using very short inputs are unlikely to produce typical typing behavior. 
+                    However, <b>spamming your keyboard with random input or using very short inputs are unlikely to produce typical typing behavior.</b> 
                     For best results, try typing a sentence or two. If you need ideas, feel free to try the button below to get a quote from Marcus Aurelius' <cite>Meditations</cite>!</p>
                 
                 <div id="sample-sentence-container">
@@ -45,7 +45,7 @@
                     <h2>Your Results</h2>
                     <p>Strokes per minute: <span id="strokes-per-minute-score">0</span></p>
                     <p>Average key hold time: <span id="avg-key-hold-time">N/A</span> milliseconds</p>
-                    <p>Stroke delay standard deviation: <span id="stroke-delay-std-dev">N/A</span> milliseconds</p>
+                    <p>Stroke delay IQR: <span id="stroke-delay-iqr">N/A</span> milliseconds</p>
                     <p>Key hold time standard deviation: <span id="key-hold-time-std-dev">N/A</span> milliseconds</p>
                     <p>Overlap percentage: <span id="overlap-percentage-score">N/A</span>%</p>
                     <p id="humanity-result">...</p>
